--- a/races.html
+++ b/races.html
@@ -546,7 +546,7 @@ function NextRaceCard(){
     dateLabel: "March 8, 2026",
     distance: 26.2,
     goalSeconds: 12600, // 3:30:00
-    logo: "images/LA - Marathaon.jpg"
+    logo: "images/maps/LA - Marathaon.jpg"
   };
 
   const pace = NEXT.goalSeconds / NEXT.distance;
@@ -588,9 +588,6 @@ function NextRaceCard(){
     </div>
   );
 }
-
-
-
 
 
 
