--- a/bake.html
+++ b/bake.html
@@ -5,10 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bake – Jan Arroyo</title>
   <meta name="description" content="Bakes, cooks, and recent eats by Jan Arroyo" />
-  <link href="styles.css?v=7" rel="stylesheet" />
+  <link href="styles.css?v=8" rel="stylesheet" />
+  <style>
+    /* —— scoped styles just for this page —— */
+    .recipes { margin-top: 22px; }
+    .recipe-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .recipe-card {
+      background: var(--panel, #fff);
+      border: 1px solid rgba(17,19,24,.08);
+      border-radius: 16px;
+      box-shadow: 0 6px 24px rgba(17,19,24,.06);
+      overflow: hidden;
+      transition: box-shadow .2s ease;
+    }
+    .recipe-card:hover { box-shadow: 0 10px 28px rgba(17,19,24,.10); }
+    .recipe-toggle {
+      display: grid;
+      grid-template-columns: 96px 1fr;
+      gap: 14px;
+      width: 100%;
+      text-align: left;
+      background: transparent;
+      border: 0;
+      padding: 14px;
+      cursor: pointer;
+      align-items: center;
+    }
+    .recipe-cover {
+      width: 96px; height: 96px; border-radius: 12px; overflow: hidden;
+      background:#fff; display:grid; place-items:center;
+    }
+    .recipe-cover img { width:100%; height:100%; object-fit: cover; display:block; }
+    .recipe-head h3 { margin: 0 0 4px; font-size: 18px; }
+    .recipe-head .meta-line { color: var(--muted,#60646c); font-size: 14px; }
+    .recipe-panel {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height .35s ease;
+      border-top: 1px solid rgba(17,19,24,.08);
+      background: #fafbfc;
+    }
+    .recipe-card.open .recipe-panel { max-height: 1400px; } /* big enough for content */
+    .recipe-inner { padding: 14px; display: grid; gap: 14px; }
+    .recipe-secondary {
+      width: 100%; height: auto; border-radius: 12px; display:block;
+      background: #fff; object-fit: contain;
+    }
+    .recipe-body {
+      display: grid; gap: 10px;
+      grid-template-columns: 1fr;
+    }
+    .recipe-body h4 { margin: 0; font-size: 16px; }
+    .recipe-body ul, .recipe-body ol { margin: 0 0 0 20px; }
+    .tag-row { display:flex; gap:8px; flex-wrap:wrap; }
+    .chip {
+      font-size: 12px; padding: 4px 8px; border-radius: 999px;
+      background: rgba(59,130,246,.10); color: var(--brand,#3b82f6);
+    }
+    /* small helper for image fallback (hidden by default) */
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;}
+  </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Navbar (matches the rest of the site) -->
   <nav class="nav">
     <div class="container nav-inner">
       <a class="brand" href="./">JAN</a>
@@ -24,10 +87,17 @@
 
   <main class="container work">
     <h1 class="page-title">Bake</h1>
-    <p class="tag">Things I’ve baked/cooked — and recent favorites from Beli.</p>
+    <p class="tag">Click a card to expand — second photo + recipe appear below.</p>
 
-    <!-- Beli widget -->
-    <a class="beli-card" href="https://beli.link/your-profile" target="_blank" rel="noopener">
+    <!-- Recipe widgets -->
+    <section class="recipes">
+      <div class="recipe-grid" id="recipeGrid">
+        <!-- Cards are injected by JS from the RECIPES array -->
+      </div>
+    </section>
+
+    <!-- Beli widget (kept) -->
+    <a class="beli-card" href="https://beli.link/your-profile" target="_blank" rel="noopener" style="margin-top:24px; display:block;">
       <div class="beli-left"><div class="beli-plate">🍽️</div></div>
       <div class="beli-right">
         <div class="beli-title">Recent eats on Beli</div>
@@ -35,53 +105,110 @@
         <div class="beli-cta">View my Beli →</div>
       </div>
     </a>
-
-    <section style="margin-top:18px;">
-      <div class="masonry">
-        <!-- Example food cards -->
-        <a class="card" href="images/bake/pain-de-campagne-full.jpg" data-large="images/bake/pain-de-campagne-full.jpg">
-          <div class="thumb"><img src="images/bake/pain-de-campagne-thumb.jpg" alt="Pain de campagne"/></div>
-          <div class="meta">
-            <span class="tag">Bread</span>
-            <h3>Pain de campagne</h3>
-            <p>50/50 AP + bread, 75% hydration, 12h cold proof.</p>
-          </div>
-        </a>
-
-        <a class="card" href="images/bake/espresso-tonic-full.jpg" data-large="images/bake/espresso-tonic-full.jpg">
-          <div class="thumb"><img src="images/bake/espresso-tonic-thumb.jpg" alt="Espresso tonic"/></div>
-          <div class="meta">
-            <span class="tag">Coffee</span>
-            <h3>Espresso tonic</h3>
-            <p>Tonx + yuzu peel.</p>
-          </div>
-        </a>
-      </div>
-    </section>
   </main>
 
   <footer><div class="container">© <span id="y"></span> Jan Arroyo</div></footer>
 
-  <!-- Lightbox -->
-  <div class="lightbox" id="lb"><div class="lightbox-content">
-    <div class="lightbox-header"><strong>Photo</strong><button class="close" id="lbClose">Close</button></div>
-    <div class="lightbox-body"><img id="lbImg" alt=""></div>
-  </div></div>
-
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // Lightbox
-    const lb = document.getElementById('lb'), lbImg = document.getElementById('lbImg'), lbClose = document.getElementById('lbClose');
-    document.querySelectorAll('.card').forEach(c => c.addEventListener('click', e => {
-      e.preventDefault(); lb.classList.add('open'); lbImg.src = c.dataset.large || c.href;
-    }));
-    lbClose.onclick = () => lb.classList.remove('open');
-    lb.onclick = e => { if (e.target === lb) lb.classList.remove('open'); };
+    // ====== Data: add/edit your recipes here (uses images/baking/) ======
+    const RECIPES = [
+      {
+        id: "jellycat",
+        title: "JellyCat Cookies",
+        cover: "images/baking/JellyCat_1.jpg",
+        second: "images/baking/JellyCat_2.jpg",
+        tags: ["cookies", "baking"],
+        meta: "Makes ~18 • ~45 min active",
+        ingredients: [
+          "1 cup (226g) unsalted butter, room temp",
+          "3/4 cup (150g) sugar",
+          "1 large egg",
+          "2 tsp vanilla",
+          "2 1/4 cups (270g) AP flour",
+          "1/2 tsp baking powder, 1/2 tsp salt"
+        ],
+        steps: [
+          "Cream butter + sugar 2–3 min. Mix in egg + vanilla.",
+          "Whisk dry in a bowl; add to wet just until combined.",
+          "Scoop 1.5 tbsp balls; chill 15 min. Bake 350°F / 177°C for 10–12 min.",
+          "Decorate to your heart’s content. Let cool before serving."
+        ]
+      },
+      {
+        id: "thumbprint",
+        title: "Thumbprint Cookies",
+        cover: "images/baking/ThumbPrint_1.jpg",
+        // try the normal spelling first, then fall back to 'ThumPrint_2.jpg' if needed
+        second: "images/baking/ThumbPrint_2.jpg",
+        secondFallback: "images/baking/ThumPrint_2.jpg",
+        tags: ["cookies", "jam"],
+        meta: "Makes ~24 • ~35 min active",
+        ingredients: [
+          "1 cup (226g) unsalted butter, room temp",
+          "2/3 cup (85g) powdered sugar",
+          "2 tsp vanilla, pinch of salt",
+          "2 cups (240g) AP flour",
+          "1/2 cup jam (raspberry or your fave)"
+        ],
+        steps: [
+          "Beat butter + sugar until smooth. Mix in vanilla + salt.",
+          "Add flour just until a dough forms.",
+          "Roll 1 tbsp balls; press a well with thumb. Fill with jam.",
+          "Bake 350°F / 177°C for 12–14 min; cool, dust with sugar."
+        ]
+      }
+    ];
 
-    // Beli feed (edit /data/beli.json in your repo to update quickly)
+    // ====== Render cards ======
+    const grid = document.getElementById('recipeGrid');
+    RECIPES.forEach(r => {
+      const card = document.createElement('article');
+      card.className = 'recipe-card';
+      card.id = `recipe-${r.id}`;
+      card.innerHTML = `
+        <button class="recipe-toggle" aria-expanded="false" aria-controls="panel-${r.id}">
+          <div class="recipe-cover"><img src="${r.cover}" alt="${r.title} cover"></div>
+          <div class="recipe-head">
+            <h3>${r.title}</h3>
+            <div class="meta-line">${r.meta || ''}</div>
+            <div class="tag-row">${(r.tags||[]).map(t=>`<span class="chip">${t}</span>`).join('')}</div>
+          </div>
+        </button>
+        <div class="recipe-panel" id="panel-${r.id}">
+          <div class="recipe-inner">
+            <img class="recipe-secondary" src="${r.second}" alt="${r.title} (step/result)"
+                 onerror="${r.secondFallback ? `this.onerror=null; this.src='${r.secondFallback}'` : 'this.onerror=null'}">
+            <div class="recipe-body">
+              <div>
+                <h4>Ingredients</h4>
+                <ul>${(r.ingredients||[]).map(i=>`<li>${i}</li>`).join('')}</ul>
+              </div>
+              <div>
+                <h4>Steps</h4>
+                <ol>${(r.steps||[]).map(s=>`<li>${s}</li>`).join('')}</ol>
+              </div>
+            </div>
+          </div>
+        </div>
+      `;
+      grid.appendChild(card);
+    });
+
+    // ====== Toggle behavior (expand/collapse) ======
+    grid.addEventListener('click', (e) => {
+      const btn = e.target.closest('.recipe-toggle');
+      if (!btn) return;
+      const card = btn.closest('.recipe-card');
+      const open = card.classList.toggle('open');
+      btn.setAttribute('aria-expanded', String(open));
+    });
+
+    // ====== Beli feed (optional) ======
     (async function(){
       const listEl = document.getElementById('beli-list');
+      if (!listEl) return;
       try {
         const res = await fetch('data/beli.json?v=1', { cache: 'no-store' });
         if (!res.ok) throw new Error('fetch failed');
