--- a/bake.html
+++ b/bake.html
@@ -4,74 +4,55 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bake – Jan Arroyo</title>
-  <meta name="description" content="Bakes, cooks, and recent eats by Jan Arroyo" />
-  <link href="styles.css?v=8" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
   <style>
-    /* —— scoped styles just for this page —— */
-    .recipes { margin-top: 22px; }
-    .recipe-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 20px;
+    /* ——— scoped to this page ——— */
+    .rcp-grid{
+      display:grid; gap:20px;
+      grid-template-columns:repeat(3,1fr);
     }
-    .recipe-card {
-      background: var(--panel, #fff);
-      border: 1px solid rgba(17,19,24,.08);
-      border-radius: 16px;
-      box-shadow: 0 6px 24px rgba(17,19,24,.06);
-      overflow: hidden;
-      transition: box-shadow .2s ease;
+    @media (max-width:1100px){ .rcp-grid{grid-template-columns:repeat(2,1fr);} }
+    @media (max-width:640px){ .rcp-grid{grid-template-columns:1fr;} }
+
+    .rcp-card{
+      border-radius:16px; overflow:hidden;
+      background:var(--panel,#fff);
+      border:1px solid rgba(17,19,24,.08);
+      box-shadow:0 6px 24px rgba(17,19,24,.06);
+      transition:box-shadow .2s ease;
     }
-    .recipe-card:hover { box-shadow: 0 10px 28px rgba(17,19,24,.10); }
-    .recipe-toggle {
-      display: grid;
-      grid-template-columns: 96px 1fr;
-      gap: 14px;
-      width: 100%;
-      text-align: left;
-      background: transparent;
-      border: 0;
-      padding: 14px;
-      cursor: pointer;
-      align-items: center;
+    .rcp-card:hover{ box-shadow:0 10px 28px rgba(17,19,24,.10); }
+
+    .rcp-toggle{ display:block; width:100%; border:0; padding:0; background:transparent; cursor:pointer; text-align:left; }
+    .rcp-photo{ position:relative; aspect-ratio:4/3; }
+    .rcp-photo img{ width:100%; height:100%; object-fit:cover; display:block; }
+    .rcp-caption{
+      position:absolute; left:0; right:0; bottom:0;
+      padding:10px 12px; color:#fff; font-weight:700;
+      background:linear-gradient(to top, rgba(0,0,0,.55), rgba(0,0,0,0));
+      text-shadow:0 1px 2px rgba(0,0,0,.5);
     }
-    .recipe-cover {
-      width: 96px; height: 96px; border-radius: 12px; overflow: hidden;
-      background:#fff; display:grid; place-items:center;
+
+    .rcp-panel{
+      max-height:0; overflow:hidden;
+      transition:max-height .35s ease;
+      background:#fafbfc; border-top:1px solid rgba(17,19,24,.08);
     }
-    .recipe-cover img { width:100%; height:100%; object-fit: cover; display:block; }
-    .recipe-head h3 { margin: 0 0 4px; font-size: 18px; }
-    .recipe-head .meta-line { color: var(--muted,#60646c); font-size: 14px; }
-    .recipe-panel {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height .35s ease;
-      border-top: 1px solid rgba(17,19,24,.08);
-      background: #fafbfc;
-    }
-    .recipe-card.open .recipe-panel { max-height: 1400px; } /* big enough for content */
-    .recipe-inner { padding: 14px; display: grid; gap: 14px; }
-    .recipe-secondary {
-      width: 100%; height: auto; border-radius: 12px; display:block;
-      background: #fff; object-fit: contain;
-    }
-    .recipe-body {
-      display: grid; gap: 10px;
-      grid-template-columns: 1fr;
-    }
-    .recipe-body h4 { margin: 0; font-size: 16px; }
-    .recipe-body ul, .recipe-body ol { margin: 0 0 0 20px; }
-    .tag-row { display:flex; gap:8px; flex-wrap:wrap; }
-    .chip {
-      font-size: 12px; padding: 4px 8px; border-radius: 999px;
-      background: rgba(59,130,246,.10); color: var(--brand,#3b82f6);
-    }
-    /* small helper for image fallback (hidden by default) */
-    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;}
+    .rcp-card.open .rcp-panel{ max-height:2200px; } /* large enough to reveal content */
+
+    .rcp-inner{ padding:16px; display:grid; gap:16px; }
+    .rcp-photos2{ display:grid; gap:12px; grid-template-columns:1fr 1fr; }
+    @media (max-width:640px){ .rcp-photos2{ grid-template-columns:1fr; } }
+    .rcp-photos2 img{ width:100%; height:auto; border-radius:12px; background:#fff; object-fit:contain; }
+
+    .rcp-body{ display:grid; gap:16px; grid-template-columns:1fr 1fr; }
+    @media (max-width:800px){ .rcp-body{ grid-template-columns:1fr; } }
+    .rcp-body h4{ margin:0 0 6px; }
+    .rcp-body ul, .rcp-body ol{ margin:0 0 0 18px; }
   </style>
 </head>
 <body>
-  <!-- Navbar (matches the rest of the site) -->
+  <!-- simple nav matching your site -->
   <nav class="nav">
     <div class="container nav-inner">
       <a class="brand" href="./">JAN</a>
@@ -87,24 +68,9 @@
 
   <main class="container work">
     <h1 class="page-title">Bake</h1>
-    <p class="tag">Click a card to expand — second photo + recipe appear below.</p>
+    <p class="tag">Click a photo to expand — second image and the recipe appear below.</p>
 
-    <!-- Recipe widgets -->
-    <section class="recipes">
-      <div class="recipe-grid" id="recipeGrid">
-        <!-- Cards are injected by JS from the RECIPES array -->
-      </div>
-    </section>
-
-    <!-- Beli widget (kept) -->
-    <a class="beli-card" href="https://beli.link/your-profile" target="_blank" rel="noopener" style="margin-top:24px; display:block;">
-      <div class="beli-left"><div class="beli-plate">🍽️</div></div>
-      <div class="beli-right">
-        <div class="beli-title">Recent eats on Beli</div>
-        <ul class="beli-list" id="beli-list"><li>Loading recent bites…</li></ul>
-        <div class="beli-cta">View my Beli →</div>
-      </div>
-    </a>
+    <section class="rcp-grid" id="rcpGrid"><!-- cards injected by JS --></section>
   </main>
 
   <footer><div class="container">© <span id="y"></span> Jan Arroyo</div></footer>
@@ -112,15 +78,13 @@
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // ====== Data: add/edit your recipes here (uses images/baking/) ======
+    // ====== your recipes (uses images/baking/) ======
     const RECIPES = [
       {
         id: "jellycat",
         title: "JellyCat Cookies",
-        cover: "images/baking/JellyCat_1.jpg",
-        second: "images/baking/JellyCat_2.jpg",
-        tags: ["cookies", "baking"],
-        meta: "Makes ~18 • ~45 min active",
+        img1: "images/baking/JellyCat_1.jpg",
+        img2: "images/baking/JellyCat_2.jpg",
         ingredients: [
           "1 cup (226g) unsalted butter, room temp",
           "3/4 cup (150g) sugar",
@@ -130,57 +94,55 @@
           "1/2 tsp baking powder, 1/2 tsp salt"
         ],
         steps: [
-          "Cream butter + sugar 2–3 min. Mix in egg + vanilla.",
-          "Whisk dry in a bowl; add to wet just until combined.",
-          "Scoop 1.5 tbsp balls; chill 15 min. Bake 350°F / 177°C for 10–12 min.",
-          "Decorate to your heart’s content. Let cool before serving."
+          "Cream butter + sugar 2–3 min; beat in egg and vanilla.",
+          "Whisk dry; fold into wet just until combined.",
+          "Scoop 1.5 Tbsp balls; chill 15 min; bake 350°F for 10–12 min.",
+          "Cool and decorate."
         ]
       },
       {
         id: "thumbprint",
         title: "Thumbprint Cookies",
-        cover: "images/baking/ThumbPrint_1.jpg",
-        // try the normal spelling first, then fall back to 'ThumPrint_2.jpg' if needed
-        second: "images/baking/ThumbPrint_2.jpg",
-        secondFallback: "images/baking/ThumPrint_2.jpg",
-        tags: ["cookies", "jam"],
-        meta: "Makes ~24 • ~35 min active",
+        img1: "images/baking/ThumbPrint_1.jpg",
+        img2: "images/baking/ThumbPrint_2.jpg",
+        img2Fallback: "images/baking/ThumPrint_2.jpg", // in case filename is missing the 'b'
         ingredients: [
           "1 cup (226g) unsalted butter, room temp",
           "2/3 cup (85g) powdered sugar",
           "2 tsp vanilla, pinch of salt",
           "2 cups (240g) AP flour",
-          "1/2 cup jam (raspberry or your fave)"
+          "1/2 cup jam"
         ],
         steps: [
-          "Beat butter + sugar until smooth. Mix in vanilla + salt.",
-          "Add flour just until a dough forms.",
-          "Roll 1 tbsp balls; press a well with thumb. Fill with jam.",
-          "Bake 350°F / 177°C for 12–14 min; cool, dust with sugar."
+          "Beat butter + sugar smooth; mix in vanilla + salt.",
+          "Add flour until dough forms.",
+          "Roll 1 Tbsp balls; thumb a well; fill with jam.",
+          "Bake 350°F for 12–14 min; cool; dust with sugar."
         ]
       }
     ];
 
-    // ====== Render cards ======
-    const grid = document.getElementById('recipeGrid');
+    // ====== render 3-up grid ======
+    const grid = document.getElementById('rcpGrid');
     RECIPES.forEach(r => {
       const card = document.createElement('article');
-      card.className = 'recipe-card';
-      card.id = `recipe-${r.id}`;
+      card.className = 'rcp-card';
+      card.id = `rcp-${r.id}`;
       card.innerHTML = `
-        <button class="recipe-toggle" aria-expanded="false" aria-controls="panel-${r.id}">
-          <div class="recipe-cover"><img src="${r.cover}" alt="${r.title} cover"></div>
-          <div class="recipe-head">
-            <h3>${r.title}</h3>
-            <div class="meta-line">${r.meta || ''}</div>
-            <div class="tag-row">${(r.tags||[]).map(t=>`<span class="chip">${t}</span>`).join('')}</div>
+        <button class="rcp-toggle" aria-expanded="false" aria-controls="panel-${r.id}">
+          <div class="rcp-photo">
+            <img src="${r.img1}" alt="${r.title} cover" loading="lazy">
+            <div class="rcp-caption">${r.title}</div>
           </div>
         </button>
-        <div class="recipe-panel" id="panel-${r.id}">
-          <div class="recipe-inner">
-            <img class="recipe-secondary" src="${r.second}" alt="${r.title} (step/result)"
-                 onerror="${r.secondFallback ? `this.onerror=null; this.src='${r.secondFallback}'` : 'this.onerror=null'}">
-            <div class="recipe-body">
+        <div class="rcp-panel" id="panel-${r.id}">
+          <div class="rcp-inner">
+            <div class="rcp-photos2">
+              <img src="${r.img1}" alt="${r.title} image 1" loading="lazy">
+              <img src="${r.img2}" alt="${r.title} image 2" loading="lazy"
+                   onerror="${r.img2Fallback ? `this.onerror=null; this.src='${r.img2Fallback}'` : 'this.onerror=null'}">
+            </div>
+            <div class="rcp-body">
               <div>
                 <h4>Ingredients</h4>
                 <ul>${(r.ingredients||[]).map(i=>`<li>${i}</li>`).join('')}</ul>
@@ -196,36 +158,14 @@
       grid.appendChild(card);
     });
 
-    // ====== Toggle behavior (expand/collapse) ======
+    // ====== expand/collapse ======
     grid.addEventListener('click', (e) => {
-      const btn = e.target.closest('.recipe-toggle');
+      const btn = e.target.closest('.rcp-toggle');
       if (!btn) return;
-      const card = btn.closest('.recipe-card');
+      const card = btn.closest('.rcp-card');
       const open = card.classList.toggle('open');
       btn.setAttribute('aria-expanded', String(open));
     });
-
-    // ====== Beli feed (optional) ======
-    (async function(){
-      const listEl = document.getElementById('beli-list');
-      if (!listEl) return;
-      try {
-        const res = await fetch('data/beli.json?v=1', { cache: 'no-store' });
-        if (!res.ok) throw new Error('fetch failed');
-        const data = await res.json();
-        listEl.innerHTML = '';
-        (data || []).slice(0,3).forEach(item => {
-          const li = document.createElement('li');
-          const when = item.when ? ` • ${item.when}` : '';
-          const rating = item.rating ? ` • ${item.rating}` : '';
-          li.textContent = `• ${item.place} — ${item.blurb}${rating}${when}`;
-          listEl.appendChild(li);
-        });
-        if (!listEl.children.length) listEl.innerHTML = '<li>No recent bites yet.</li>';
-      } catch(e){
-        listEl.innerHTML = '<li>Couldn’t load recent bites.</li>';
-      }
-    })();
   </script>
 </body>
 </html>
