Add images and update bake page

--- a/bake.html
+++ b/bake.html
@@ -83,8 +83,8 @@
       {
         id: "jellycat",
         title: "JellyCat Cookies",
-        img1: "images/baking/JellyCat_1.jpg",
-        img2: "images/baking/JellyCat_2.jpg",
+        img1: "images/JellyCat_1.jpg",
+        img2: "images/JellyCat_2.jpg",
         ingredients: [
           "1 cup (226g) unsalted butter, room temp",
           "3/4 cup (150g) sugar",
@@ -103,8 +103,8 @@
       {
         id: "thumbprint",
         title: "Thumbprint Cookies",
-        img1: "images/baking/ThumbPrint_1.jpg",
-        img2: "images/baking/ThumbPrint_2.jpg",
+        img1: "images/ThumbPrint_1.jpg",
+        img2: "images/ThumbPrint_2.jpg",
         img2Fallback: "images/baking/ThumPrint_2.jpg", // in case filename is missing the 'b'
         ingredients: [
           "1 cup (226g) unsalted butter, room temp",
